--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 server.port=80
+
+# mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/devmatch?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# 쿼리문 출력
+spring.jpa.properties.hibernate.show_sql=true
+# 쿼리문 포맷팅
+spring.jpa.properties.hibernate.format_sql=true
+# 쿼리문 ? 파라미터 출력
+logging.level.org.hibernate.type.descriptor.sql=trace
+# 데이터베이스 초기화 전략
+spring.jpa.hibernate.ddl-auto=update
+# 데이터베이스 방언(db platform)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Live Reload
+spring.devtools.livereload.enabled=true
+# 타임리프 캐싱
+spring.thymeleaf.cache = false
