--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,14 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.devtools.livereload.enabled=true
 # 타임리프 캐싱
 spring.thymeleaf.cache = false
+
+# 파일 한개당 최대 사이즈
+spring.servlet.multipart.maxFileSize=20MB
+# request 최대 파일 크기
+spring.servlet.multipart.maxRequestSize=100MB
+# 기술 스택 이미지 업로드 경로
+stackImgLocation=/Users/yjs/tmp/devmatch/stack
+# 회원 이미지 업로드 경로
+memberImgLocation=/Users/yjs/tmp/devmatch/member
+# 리소스 업로드 경로
+uploadPath=file:///Users/yjs/tmp/devmatch/
