파트너 찾기 페이지 리수트 구현, 검색기능 구현중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,7 @@ spring.servlet.multipart.maxRequestSize=100MB
 stackImgLocation=/Users/yjs/tmp/devmatch/stack
 # 회원 이미지 업로드 경로
 memberImgLocation=/Users/yjs/tmp/devmatch/member
+# 프로필 이미지 업로드 경로
+profileImgLocation=/Users/yjs/tmp/devmatch/profile
 # 리소스 업로드 경로
 uploadPath=file:///Users/yjs/tmp/devmatch/
