portfolio 등록및 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,5 +32,7 @@ stackImgLocation=/Users/yjs/tmp/devmatch/stack
 memberImgLocation=/Users/yjs/tmp/devmatch/member
 # 프로필 이미지 업로드 경로
 profileImgLocation=/Users/yjs/tmp/devmatch/profile
-# 리소스 업로드 경로
+# 포트폴리오 이미지 업로드 경로
+portfolioImgLocation=/Users/yjs/tmp/devmatch/portfolio
+# 리소스 업로드된 경로
 uploadPath=file:///Users/yjs/tmp/devmatch/
