aws 배포 설정 포트폴리오 리스트 페이지 팝업 요청 기능 구현 마이페이지 요청 내역 구현

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,17 +27,12 @@ spring.servlet.multipart.maxFileSize=20MB
 # request 최대 파일 크기
 spring.servlet.multipart.maxRequestSize=100MB
 # 기술 스택 이미지 업로드 경로
-# stackImgLocation=/Users/yjs/tmp/devmatch/stack
-stackImgLocation=C:/devmatch/stack
+stackImgLocation=/Users/yjs/tmp/devmatch/stack
 # 회원 이미지 업로드 경로
-# memberImgLocation=/Users/yjs/tmp/devmatch/member
-memberImgLocation=C:/devmatch/member
+memberImgLocation=/Users/yjs/tmp/devmatch/member
 # 프로필 이미지 업로드 경로
-# profileImgLocation=/Users/yjs/tmp/devmatch/profile
-profileImgLocation=C:/devmatch/profile
+profileImgLocation=/Users/yjs/tmp/devmatch/profile
 # 포트폴리오 이미지 업로드 경로
-# portfolioImgLocation=/Users/yjs/tmp/devmatch/portfolio
-portfolioImgLocation=C:devmatch/portfolio
+portfolioImgLocation=/Users/yjs/tmp/devmatch/portfolio
 # 리소스 업로드된 경로
-# uploadPath=file:///Users/yjs/tmp/devmatch/
-uploadPath=file:///C:/devmatch/
+uploadPath=file:///Users/yjs/tmp/devmatch/
