--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,12 @@
 	<groupId>com.example</groupId>
 	<artifactId>devmatch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>devmatch</name>
 	<description>developer matching web</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -95,6 +97,13 @@
 			<scope>test</scope>
       <version>${spring-security.version}</version>
 		</dependency>
+		
+		<dependency>
+    	<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
